# Robust-Sentiment-and-Emotion-Classification-on-Noisy-Urdu-Tweets

./: .gitignore
Assignment#01/: Assignment 1.docx  NLP_Assignment#01.docx  NLP_Preprocessing.ipynb  Urdu Tweets Dataset.csv  Urdu Tweets Dataset.xlsx
Assignment#02/: Assignment 2.docx  Assignment2_LiteratureReview.md  Literature Review Plan for Robust Urdu Twitter Sentiment and Emotion Analysis with Noisy Labels (SentiUrdu‑1M).md  NUM-BSCS-2022-40_41_Assignment2_ProjectMilestone2.docx
Assignment#03/: 01_dataset_analysis.ipynb  02_model_implementation.ipynb  03_evaluation.ipynb  04_architecture_math.md  Assignment 3.docx  README.md  _build_notebooks.py  config.py  implementation_plan.md  models_dl.py  preprocessing.py  pyproject.toml  requirements.txt  train_dl.py  train_transformer.py
Assignment#03/outputs/results/: leaderboard_emotion.csv  leaderboard_sentiment.csv  pred_emotion_bilstm.csv  pred_emotion_cnn.csv  pred_emotion_lr.csv  pred_emotion_mbert.csv  pred_emotion_svm.csv  pred_emotion_urdu-roberta.csv  pred_emotion_xlm-r.csv  pred_sentiment_bilstm.csv  pred_sentiment_cnn.csv  pred_sentiment_lr.csv  pred_sentiment_mbert.csv  pred_sentiment_svm.csv  pred_sentiment_urdu-roberta.csv  pred_sentiment_xlm-r.csv
Assignment#03/report/: AI_Declaration.md  Assignment3_TechnicalReport.docx  Assignment3_TechnicalReport.filled.md  Assignment3_TechnicalReport.md  Assignment3_TechnicalReport.tex  Similarity_Report.md  build_report.py  results_summary.json
