[project]
name = "urdu-sentiment-emotion"
version = "0.1.0"
description = "Assignment 3 — Robust Sentiment and Emotion Classification on Noisy Urdu Tweets (SentiUrdu-1M)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Raqib Hayat", email = "" },
    { name = "Abu Bakar", email = "" },
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24,<2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "wordcloud>=1.9",
    "arabic-reshaper>=3.0",
    "python-bidi>=0.4",
    "emoji>=2.0",
    "regex>=2023.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "torch>=2.4",
    "transformers>=4.40",
    "datasets>=2.18",
    "accelerate>=0.30",
    "sentencepiece>=0.2",
    "tokenizers>=0.19",
    "safetensors>=0.4",
    "tqdm>=4.65",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "ipywidgets>=8.0",
    "ipykernel>=6.25",
    "nbformat>=5.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["preprocessing", "config"]
